browser/themes/shared/incontentprefs/preferences.inc.css
%
if
0
%
endif
namespace
html
"
http
:
/
/
www
.
w3
.
org
/
1999
/
xhtml
"
;
#
mainPrefPane
{
max
-
width
:
800px
;
padding
:
0
;
font
:
message
-
box
;
font
-
size
:
1
.
25rem
;
line
-
height
:
22px
;
}
*
{
-
moz
-
user
-
select
:
text
;
}
button
treecol
{
-
moz
-
user
-
select
:
none
;
}
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
preferences
/
in
-
content
/
icons
.
png
"
)
;
}
#
category
-
general
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
24px
24px
0
)
;
}
#
category
-
search
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
192px
24px
168px
)
;
}
#
category
-
content
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
48px
24px
24px
)
;
}
#
category
-
application
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
72px
24px
48px
)
;
}
#
category
-
privacy
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
96px
24px
72px
)
;
}
#
category
-
security
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
120px
24px
96px
)
;
}
#
category
-
sync
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
144px
24px
120px
)
;
}
#
category
-
advanced
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
168px
24px
144px
)
;
}
media
(
min
-
resolution
:
2dppx
)
{
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
preferences
/
in
-
content
/
icons
2x
.
png
"
)
;
}
#
category
-
general
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
48px
48px
0
)
;
}
#
category
-
search
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
384px
48px
336px
)
;
}
#
category
-
content
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
96px
48px
48px
)
;
}
#
category
-
application
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
144px
48px
96px
)
;
}
#
category
-
privacy
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
192px
48px
144px
)
;
}
#
category
-
security
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
240px
48px
192px
)
;
}
#
category
-
sync
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
288px
48px
240px
)
;
}
#
category
-
advanced
>
.
category
-
icon
{
-
moz
-
image
-
region
:
rect
(
0
336px
48px
288px
)
;
}
}
media
(
max
-
width
:
800px
)
{
.
category
-
name
{
display
:
none
;
}
}
#
header
-
advanced
{
border
-
bottom
:
none
;
padding
-
bottom
:
0
;
}
#
useFirefoxSync
{
font
-
size
:
90
%
;
-
moz
-
margin
-
end
:
8px
!
important
;
}
#
getStarted
{
font
-
size
:
90
%
;
}
#
isNotDefaultLabel
{
font
-
weight
:
bold
;
}
#
downloadFolder
{
-
moz
-
margin
-
start
:
0
;
}
#
applicationsContent
{
padding
:
15px
0
;
}
#
filter
{
-
moz
-
margin
-
start
:
0
;
}
#
handlersView
{
height
:
25em
;
}
#
handlersView
>
richlistitem
{
min
-
height
:
36px
!
important
;
}
.
typeIcon
{
-
moz
-
margin
-
start
:
10px
!
important
;
-
moz
-
margin
-
end
:
9px
!
important
;
}
.
actionIcon
{
-
moz
-
margin
-
start
:
11px
!
important
;
-
moz
-
margin
-
end
:
8px
!
important
;
}
.
actionsMenu
{
min
-
height
:
36px
;
}
.
actionsMenu
>
menupopup
>
menuitem
{
-
moz
-
padding
-
start
:
10px
!
important
;
}
.
actionsMenu
>
menupopup
>
menuitem
>
.
menu
-
iconic
-
left
{
-
moz
-
margin
-
end
:
8px
!
important
;
}
description
>
html
|
a
{
cursor
:
pointer
;
}
#
noFxaAccount
{
margin
:
0
;
}
#
weavePrefsDeck
>
vbox
>
label
#
weavePrefsDeck
>
vbox
>
groupbox
#
weavePrefsDeck
>
vbox
>
description
#
weavePrefsDeck
>
vbox
>
#
pairDevice
>
label
#
weavePrefsDeck
>
#
needsUpdate
>
hbox
>
#
loginError
#
weavePrefsDeck
>
#
hasFxaAccount
>
hbox
:
not
(
#
tosPP
-
normal
)
>
label
#
weavePrefsDeck
>
#
hasFxaAccount
>
hbox
:
not
(
#
tosPP
-
small
)
>
label
{
-
moz
-
margin
-
start
:
0
;
}
#
advancedPrefs
{
padding
-
bottom
:
0
;
}
#
tabsElement
{
-
moz
-
margin
-
end
:
4px
;
}
#
encryptionPanel
{
margin
-
top
:
15px
;
}
#
telemetryLearnMore
#
FHRLearnMore
#
crashReporterLearnMore
{
margin
-
top
:
8px
;
margin
-
bottom
:
8px
;
}
.
indent
{
-
moz
-
margin
-
start
:
33px
;
}
#
trackingProtectionImage
{
width
:
16px
;
height
:
16px
;
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
bad
-
content
-
blocked
-
16
.
png
)
;
}
media
(
min
-
resolution
:
2dppx
)
{
#
trackingProtectionImage
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
bad
-
content
-
blocked
-
16
2x
.
png
)
;
}
}
#
dialogOverlay
{
background
-
color
:
rgba
(
0
0
0
0
.
5
)
;
visibility
:
hidden
;
}
#
dialogBox
{
background
-
color
:
#
fbfbfb
;
background
-
clip
:
content
-
box
;
color
:
#
424e5a
;
font
-
size
:
14px
;
border
:
1px
solid
transparent
;
border
-
radius
:
3
.
5px
;
box
-
shadow
:
0
2px
6px
0
rgba
(
0
0
0
0
.
3
)
;
display
:
-
moz
-
box
;
margin
:
0
;
padding
:
0
;
}
#
dialogBox
[
resizable
=
"
true
"
]
{
resize
:
both
;
overflow
:
hidden
;
min
-
height
:
20em
;
min
-
width
:
66ch
;
}
#
dialogBox
>
.
groupbox
-
title
{
padding
:
3
.
5px
0
;
background
-
color
:
#
F1F1F1
;
border
-
bottom
:
1px
solid
#
C1C1C1
;
}
#
dialogTitle
{
text
-
align
:
center
;
}
.
close
-
icon
{
background
-
color
:
transparent
!
important
;
border
:
none
;
box
-
shadow
:
none
;
height
:
18px
;
padding
:
0
;
min
-
width
:
18px
;
}
#
dialogBox
>
.
groupbox
-
body
{
-
moz
-
appearance
:
none
;
padding
:
20px
;
}
#
dialogFrame
{
-
moz
-
box
-
flex
:
1
;
height
:
20em
;
width
:
66ch
;
}
#
sync
-
migrate
-
upgrade
-
description
{
min
-
width
:
100px
}
#
sync
-
migration
{
border
:
1px
solid
rgba
(
0
0
0
0
.
32
)
;
background
-
color
:
InfoBackground
;
color
:
InfoText
;
text
-
shadow
:
none
;
margin
:
5px
0
0
0
;
animation
:
fadein
3000ms
;
}
keyframes
fadein
{
from
{
opacity
:
0
;
}
to
{
opacity
:
1
;
}
}

